/*
 *  Example from 9.5.3
 */
package chapter09.example.examples;

/**
 *
 * @author emaph
 */
public class Student {
    String name; // name has the default value null
    int age;     // age has the defualt value 0
    boolean isScienceMajor;  // isScienceMajor has the default value of false
    char gender;  // gender has default value '\u0000'
}
