@startuml
title Figure 10.4 Association
left to right direction
together {
    class Student {
        -courseList: Course[]
        + addCourse(c: Course): void
    }
    
    class Course { 
        -classList: Student[]
        -faculty: Faculty
        +addStudent(s: Student): void
        +setFaculty(faculty: Faculty): void
    }
    
    class Faculty {
        -courseList: Course[]
        +addCourse(c: Course): void
    }
}

Student "5..60" -- "*" Course : Take >
Course "0..3" -- "Teacher" Faculty : Teach <
@enduml
